[package]
name = "host"
version = "0.1.0"
authors = ["The Roc Contributors"]
license = "UPL-1.0"
edition = "2018"
links = "app"
resolver = "2"

[lib]
name = "host"
path = "src/lib.rs"
crate-type = ["staticlib", "rlib"]

[[bin]]
name = "host"
path = "src/main.rs"

[dependencies]
roc_std = { path = "../roc/roc_std" }
libc = "0.2"
plotters = "0.3.1"

[workspace]
